// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderContentMovie should be rendered correctly 1`] = `
<styled.div
  height={500}
>
  <a
    href="/"
  >
    <styled.img
      src=""
    />
  </a>
  <styled.img
    src="test_path"
  />
  <styled.div>
    <styled.div>
      <styled.h1>
        test-title
      </styled.h1>
      <styled.div>
        <styled.h3>
          123
        </styled.h3>
      </styled.div>
    </styled.div>
    <styled.div>
      <styled.div>
        <styled.h3>
          2020
        </styled.h3>
        <styled.p>
          year
        </styled.p>
      </styled.div>
      <styled.div>
        <styled.h3>
          123
        </styled.h3>
        <styled.p>
          min
        </styled.p>
      </styled.div>
    </styled.div>
    <styled.div>
      <styled.p>
        test overview
      </styled.p>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`HeaderContentMovieStyled should be rendered correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  width: 100%;
  height: 500px;
  z-index: 9999;
  padding: 100px 100px;
  box-sizing: border-box;
}

<div
  className="c0"
  height={500}
/>
`;

exports[`MovieDescription should be rendered correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
  className="c0"
/>
`;

exports[`MovieInfo should be rendered correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: #FFFFFF;
  margin-right: 30px;
}

<div
  className="c0"
/>
`;

exports[`MovieInfoProperty should be rendered correctly 1`] = `
.c0 {
  font-size: small;
  color: #555555;
  margin: 0;
}

<p
  className="c0"
/>
`;

exports[`MovieInfoValue should be rendered correctly 1`] = `
.c0 {
  color: #F65261;
  margin: 0 8px 0 0;
}

<h3
  className="c0"
/>
`;

exports[`Poster should be rendered correctly 1`] = `
.c0 {
  height: 100%;
  width: 250px;
  margin-right: 70px;
}

<img
  className="c0"
/>
`;

exports[`Rating should be rendered correctly 1`] = `
.c0 {
  color: #A1E66F;
  float: left;
  clear: left;
  margin: 0;
  padding: 0;
}

<h3
  className="c0"
/>
`;

exports[`RatingBox should be rendered correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 1px solid #FFFFFF;
  padding: 10px 10px;
  height: 20px;
  width: 20px;
  border-radius: 50%;
  margin-left: 30px;
}

<div
  className="c0"
/>
`;

exports[`Row should be rendered correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
/>
`;

exports[`SearchIcon should be rendered correctly 1`] = `
.c0 {
  position: absolute;
  top: 20px;
  right: 20px;
  width: 40px;
  height: 40px;
}

<img
  className="c0"
/>
`;

exports[`Text should be rendered correctly 1`] = `
.c0 {
  color: #FFFFFF;
}

<p
  className="c0"
/>
`;
